INTEGRATE_USER_APP: Add dependency for router
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/build.gradle
+++ b/features/tailormade_auth/build.gradle
@@ -45,8 +45,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    // Library
+    // Libraries
     api project(":libraries:tailormade_base")
+    implementation project(":libraries:tailormade_router")
 
     // Tests
     testImplementation test.junit
