--- a/features/tailormade_search/build.gradle
+++ b/features/tailormade_search/build.gradle
@@ -45,6 +45,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    // Libraries
+    implementation project(":libraries:tailormade_router")
+
     // Features
     api project(":features:tailormade_auth")
 
