TAILOR_ADD_EDIT_DESIGN: Add layout for add or edit design
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     // Libraries
     api project(":features:tailormade_auth")
 
+    // Color Picker
+    implementation color_picker
+
     // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
