--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,6 +27,7 @@ ext {
             legacy                : "1.0.0",
             firebase              : "26.0.0",
             osm                   : "6.1.8",
+            color_picker          : "2.2.2",
             test_junit            : "4.13",
             test_core             : "1.3.0",
             test_mockito          : "3.5.13",
@@ -127,4 +128,6 @@ ext {
     ]
 
     osm = "org.osmdroid:osmdroid-android:${versions.osm}"
+
+    color_picker = "com.github.skydoves:colorpickerview:${versions.color_picker}"
 }
