--- a/features/tailormade_design_detail/src/main/AndroidManifest.xml
+++ b/features/tailormade_design_detail/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application android:theme="@style/Theme.TailorMade">
 
-        <activity android:name=".feature.view.DesignDetailActivity">
+        <activity android:name="com.future.tailormade_design_detail.feature.designDetail.view.DesignDetailActivity">
             <intent-filter>
                 <action android:name="com.future.tailormade.designDetail.open" />
                 <category android:name="android.intent.category.DEFAULT" />
