--- a/tailor-app/src/main/AndroidManifest.xml
+++ b/tailor-app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.future.tailormade.tailor_app">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"  />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:name=".TailorMadeApplication"
@@ -13,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:theme">
+        tools:replace="android:theme"
+        tools:ignore="AllowBackup">
 
         <activity android:name=".feature.main.view.MainActivity">
             <intent-filter>
