TAILOR_ADD_EDIT_DESIGN: Add bottom sheet for add color
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     // Color Picker
     implementation color_picker
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
   // Tests
     testImplementation test.junit
