--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -46,14 +46,13 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // Libraries
+    implementation project(":libraries:tailormade_router")
     api project(":features:tailormade_auth")
 
     // Color Picker
     implementation color_picker
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-  // Tests
+    // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
     testImplementation test.mockito
