TAILOR_ORDERS: Add layout and fragment for orders
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/tailor-app/build.gradle
+++ b/tailor-app/build.gradle
@@ -84,8 +84,12 @@ dependencies {
     implementation project(":features:tailormade_profile")
     implementation project(":features:tailormade_chat")
     implementation project(":features:tailormade_design_detail")
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
-    // Tests
+  // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
     testImplementation test.mockito
