--- a/tailor-app/build.gradle
+++ b/tailor-app/build.gradle
@@ -83,8 +83,11 @@ dependencies {
     implementation project(":features:tailormade_profile")
     implementation project(":features:tailormade_chat")
     implementation project(":features:tailormade_design_detail")
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-  // Tests
+    // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
     testImplementation test.mockito
