SWAP_FACE_DYNAMIC_DELIVERY_MODULE: Init module
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ android {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
+
+    dynamicFeatures = [':tailormade_face_swap']
 }
 
 dependencies {
