--- a/features/tailormade_face_swap/build.gradle
+++ b/features/tailormade_face_swap/build.gradle
@@ -43,6 +43,9 @@ dependencies {
   implementation project(":app")
 
   implementation materialDesign
+  implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
   // Tests
   testImplementation test.junit
