--- a/features/tailormade_face_swap/src/main/AndroidManifest.xml
+++ b/features/tailormade_face_swap/src/main/AndroidManifest.xml
@@ -9,6 +9,17 @@
         <dist:delivery>
             <dist:on-demand />
         </dist:delivery>
+
         <dist:fusing dist:include="true" />
     </dist:module>
+
+    <application android:theme="@style/Theme.TailorMade">
+        <activity android:name=".view.FaceSwapActivity">
+            <intent-filter>
+                <action android:name="com.future.tailormade.faceSwap.open" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+    </application>
+
 </manifest>
