--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     // Libraries
     api project(":features:tailormade_auth")
+    implementation project(":libraries:opencv_sdk")
 
     // Tests
     testImplementation test.junit
