--- a/features/tailormade_face_swap/build.gradle
+++ b/features/tailormade_face_swap/build.gradle
@@ -41,11 +41,9 @@ android {
 
 dependencies {
   implementation project(":app")
+  implementation project(":libraries:opencv_sdk")
 
   implementation materialDesign
-  implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
   // Tests
   testImplementation test.junit
