--- a/features/tailormade_face_swap/src/main/AndroidManifest.xml
+++ b/features/tailormade_face_swap/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <application android:theme="@style/Theme.TailorMade">
         <activity android:name=".view.FaceSwapActivity">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
                 <action android:name="com.future.tailormade.faceSwap.open" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
