SWAP_FACE_DYNAMIC_DELIVERY_MODULE: Add library for dlib face detecting
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_face_swap/build.gradle
+++ b/features/tailormade_face_swap/build.gradle
@@ -41,7 +41,10 @@ android {
 
 dependencies {
   implementation project(":app")
+
+  // Face swap libraries
   implementation project(":libraries:opencv_sdk")
+  implementation project(":libraries:dlib")
 
   implementation materialDesign
 
