SWAP_FACE_UTILS: Add faceswap utils and c++ library
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_face_swap/build.gradle
+++ b/features/tailormade_face_swap/build.gradle
@@ -37,6 +37,12 @@ android {
   kotlinOptions {
     jvmTarget = versions.jvm
   }
+
+  externalNativeBuild {
+    cmake {
+      path file('../../CMakeLists.txt')
+    }
+  }
 }
 
 dependencies {
