SPLASH_SCREEN: Added limitation to screen orientation
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_chat/src/main/AndroidManifest.xml
+++ b/features/tailormade_chat/src/main/AndroidManifest.xml
@@ -4,11 +4,16 @@
 
     <application android:theme="@style/Theme.TailorMade">
 
-        <activity android:name=".feature.view.ChatRoomActivity">
+        <activity
+            android:name=".feature.view.ChatRoomActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="com.future.tailormade.chatRoom.open" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
     </application>
 </manifest>
