--- a/features/tailormade_auth/src/main/AndroidManifest.xml
+++ b/features/tailormade_auth/src/main/AndroidManifest.xml
@@ -4,9 +4,13 @@
 
     <application android:theme="@style/Theme.TailorMade">
 
-        <activity android:name=".feature.signIn.view.SignInActivity">
+        <activity
+            android:name=".feature.signIn.view.SignInActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="com.future.tailormade.signIn.open" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
