INTEGRATE_USER_APP: Add unit test for fixed repository, fix some response
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_chat/build.gradle
+++ b/features/tailormade_chat/build.gradle
@@ -59,13 +59,15 @@ dependencies {
     testImplementation test.junit
     testImplementation test.androidx_core
     testImplementation test.mockito
+    testImplementation test.mockito_kotlin
     androidTestImplementation androidTest.junit
     androidTestImplementation androidTest.espresso
 
+    // Coroutine
+    testImplementation coroutine.test
+
     // Annotation Processing
     kapt dataBinding.kapt
-
-    implementation materialDesign
 
     // Glide
     kapt glide.kapt
