--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,7 @@ android {
     }
 
     sourceSets {
-        androidTest.assets.srcDirs +=
-                files("$projectDir/schemas".toString())
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
     testOptions {
@@ -91,6 +90,7 @@ dependencies {
     testImplementation test.junit
     testImplementation test.androidx_core
     testImplementation test.mockito
+    testImplementation test.mockito_kotlin
     androidTestImplementation androidTest.junit
     androidTestImplementation androidTest.espresso
 
@@ -100,7 +100,8 @@ dependencies {
     // Glide
     kapt glide.kapt
 
-    implementation materialDesign
+    // Coroutine
+    testImplementation coroutine.test
 
     // Dagger 2
     kapt dagger.kapt_processor
