--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -55,8 +55,12 @@ dependencies {
     testImplementation test.junit
     testImplementation test.androidx_core
     testImplementation test.mockito
+    testImplementation test.mockito_kotlin
     androidTestImplementation androidTest.junit
     androidTestImplementation androidTest.espresso
+
+    // Coroutine
+    testImplementation coroutine.test
 
     // Annotation Processing
     kapt dataBinding.kapt
