INTEGRATE_USER_APP: Fix issue in savedStateHandle, fix error and add data mock object
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ android {
         unitTests.returnDefaultValues = true
     }
 
-    dynamicFeatures = [':features:tailormade_face_swap']
+//    dynamicFeatures = [':features:tailormade_face_swap']
 }
 
 dependencies {
