--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application android:theme="@style/Theme.TailorMade">
 
         <activity
-            android:name=".feature.settings.SettingsActivity"
+            android:name=".feature.settings.view.SettingsActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
