--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     implementation project(":libraries:tailormade_router")
 
     // Features
-    api project(":features:tailormade_auth")
+    implementation project(":features:tailormade_auth")
     implementation project(":features:tailormade_search")
     implementation project(":features:tailormade_profile")
     implementation project(":features:tailormade_chat")
