--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,8 +18,8 @@ ext {
       glide                 : "4.11.0",
       gson                  : "2.8.6",
       retrofit              : "2.9.0",
-      material              : "1.3.0-alpha03",
-      constraint_layout     : "2.0.2",
+      material              : "1.3.0-rc01",
+      constraint_layout     : "2.0.4",
       appcompat             : "1.2.0",
       core                  : "1.3.2",
       recyclerview          : "1.1.0",
