--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -7,22 +7,26 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application android:theme="@style/Theme.TailorMade">
+        <activity android:name=".feature.profile.view.ProfileActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="com.future.tailormade.profile.open" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".feature.settings.view.SettingsActivity"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="com.future.tailormade.settings.open" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".feature.editProfile.view.EditProfileActivity"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="com.future.tailormade.editProfile.open" />
 
@@ -30,4 +34,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
