--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application android:theme="@style/Theme.TailorMade">
-        <activity android:name=".feature.profile.view.ProfileActivity"
+        <activity android:name=".feature.profile.view.TailorProfileActivity"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="com.future.tailormade.profile.open" />
+                <action android:name="com.future.tailormade.tailorProfile.open" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
