--- a/tailor-app/src/main/AndroidManifest.xml
+++ b/tailor-app/src/main/AndroidManifest.xml
@@ -35,6 +35,17 @@
             android:screenOrientation="portrait">
 
             <intent-filter>
+                <action android:name="com.future.tailormade.main.open" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".feature.splash.view.SplashScreenActivity"
+            android:screenOrientation="portrait">
+
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
