--- a/libraries/tailormade_base/build.gradle
+++ b/libraries/tailormade_base/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     // Library
     api project(":libraries:tailormade_dls")
+    implementation project(":libraries:tailormade_router")
 
     api core.kotlin
     api core.legacy_support
