FAILED_CHECKOUT: Update build
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.4.1)
-
-find_package(OpenCV REQUIRED)
-
-add_library(
-        nativefaceswaplib
-        SHARED
-        features/tailormade_face_swap/src/main/jni/nativefaceswap.cpp)
-
-include_directories(features/tailormade_face_swap/src/main/jni/header)
+#cmake_minimum_required(VERSION 3.4.1)
+#
+#find_package(OpenCV REQUIRED)
+#
+#add_library(
+#        nativefaceswaplib
+#        SHARED
+#        features/tailormade_face_swap/src/main/jni/nativefaceswap.cpp)
+#
+#include_directories(features/tailormade_face_swap/src/main/jni/header)
