--- a/libraries/opencv_sdk/libcxx_helper/CMakeLists.txt
+++ b/libraries/opencv_sdk/libcxx_helper/CMakeLists.txt
@@ -1,4 +1,4 @@
-#cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.6)
 
 # dummy target to bring libc++_shared.so into packages
-#add_library(opencv_jni_shared STATIC nativefaceswap.cpp)
+add_library(opencv_jni_shared STATIC nativefaceswap.cpp)
