LOADING-STATE: Setup and add skeleton for history fragment
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_base/build.gradle
+++ b/libraries/tailormade_base/build.gradle
@@ -124,4 +124,8 @@ dependencies {
     api firebase.database
     api firebase.storage
     api firebase.auth
+
+    // Skeleton and Shimmer Layout
+    api skeleton
+    api shimmer_layout
 }
