--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,6 +31,8 @@ ext {
       color_picker          : "2.2.2",
       play_core             : "1.9.0",
       gms_location          : "17.0.0",
+      skeleton              : "1.1.2",
+      shimmer_layout        : "2.1.0",
       test_junit            : "4.13",
       test_core             : "1.3.0",
       test_mockito          : "3.5.13",
@@ -146,4 +148,8 @@ ext {
   ]
 
   color_picker = "com.github.skydoves:colorpickerview:${versions.color_picker}"
+
+  skeleton = "com.ethanhua:skeleton:${versions.skeleton}"
+
+  shimmer_layout = "io.supercharge:shimmerlayout:${versions.shimmer_layout}"
 }
