PROFILE-BUGS: Fix profile about
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_chat/src/main/AndroidManifest.xml
+++ b/features/tailormade_chat/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
         <activity
             android:name=".feature.view.ChatRoomActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
                 <action android:name="com.future.tailormade.chatRoom.open" />
