--- a/features/tailormade_chat/src/main/AndroidManifest.xml
+++ b/features/tailormade_chat/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         <activity
             android:name=".feature.view.ChatRoomActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize|adjustPan">
 
             <intent-filter>
                 <action android:name="com.future.tailormade.chatRoom.open" />
