--- a/features/tailormade_auth/build.gradle
+++ b/features/tailormade_auth/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
+    testImplementation test.arch_core
     testImplementation test.mockito
     testImplementation test.mockito_kotlin
     androidTestImplementation androidTest.junit
