--- a/tailor-app/build.gradle
+++ b/tailor-app/build.gradle
@@ -86,7 +86,9 @@ dependencies {
     // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
+    testImplementation test.arch_core
     testImplementation test.mockito
+    testImplementation test.mockito_kotlin
     androidTestImplementation androidTest.junit
     androidTestImplementation androidTest.espresso
 
