FIX-UI-BUGS: Add action to face swap button
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/opencv_sdk/libcxx_helper/CMakeLists.txt
+++ b/libraries/opencv_sdk/libcxx_helper/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.4.1)
 
-# dummy target to bring libc++_shared.so into packages
 add_library(opencv_jni_shared STATIC nativefaceswap.cpp)
+
+include_directories(../native/jni/include)
