--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
-include ':tailor-app'
 include ':app'
+include ':tailor-app'
 
 // Features
 include ':features:tailormade_auth'
@@ -7,7 +7,7 @@ include ':features:tailormade_profile'
 include ':features:tailormade_search'
 include ':features:tailormade_chat'
 include ':features:tailormade_design_detail'
-//include ':features:tailormade_face_swap'
+include ':features:tailormade_face_swap'
 
 // Libraries
 include ':libraries:tailormade_base'
