FIX-UI-BUGS: Fix toolbar
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_base/build.gradle
+++ b/libraries/tailormade_base/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     androidTestImplementation room.androidTest_arch_persistence
 
     // Logger
-    implementation timber
+    api timber
 
     // Firebase
     api platform(firebase.bom)
