--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ apply from: 'dependencies.gradle'
 
 buildscript {
     ext {
-        kotlin_version = "1.4.10"
+        kotlin_version = "1.4.21"
         navigation_version = "2.3.0"
         hilt_version = "2.29.1-alpha"
         google_service_version = "4.3.4"
+        sonar_version = "2.7.1"
+        jacoco_version = "0.8.3"
 
         compileSdkVersion = 30
         buildToolsVersion = "30.0.2"
@@ -29,11 +31,16 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "com.google.gms:google-services:$google_service_version"
+        classpath "org.jacoco:org.jacoco.core:$jacoco_version"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:$sonar_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+apply from: 'sonarqube.gradle'
+apply from: 'jacoco.gradle'
 
 allprojects {
     repositories {
