FIX_FACE_SWAP: - Move face swap dynamic to app module - Add missing file - Fix library dlib and opencv - Fix bitmap converter = Add skeleton for face swap
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,17 @@
         </activity>
 
         <activity
+            android:name=".feature.faceSwap.view.FaceSwapActivity"
+            android:screenOrientation="portrait">
+
+            <intent-filter>
+                <action android:name="com.future.tailormade.faceSwap.open" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".feature.splash.view.SplashScreenActivity"
             android:screenOrientation="portrait">
 
