FIX_FACE_SWAP: Fix face swap and optimize
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,4 +122,6 @@ dependencies {
   kapt room.kapt_compiler
   androidTestImplementation room.androidTest
   androidTestImplementation room.androidTest_arch_persistence
+
+  implementation relinker
 }
