TAILOR_APP_UNIT_TEST: Try to generate unit test report
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
+    debug {
+      testCoverageEnabled = true
+    }
   }
 
   compileOptions {
@@ -64,6 +67,11 @@ android {
   }
 
   testOptions {
+//    unitTests.all {
+//      jacoco {
+//        includeNoLocationClasses = true
+//      }
+//    }
     unitTests.includeAndroidResources = true
     unitTests.returnDefaultValues = true
   }
