TAILOR_APP_UNIT_TEST: Fix face swap
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,4 +132,7 @@ dependencies {
   androidTestImplementation room.androidTest_arch_persistence
 
   implementation relinker
+
+  implementation gms.face_detection
+  implementation mlkit.face_detection
 }
