--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.future.tailormade">
 
-    <!-- Location access permission -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
     <!-- Internet access permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -26,6 +22,10 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:theme"
         tools:ignore="AllowBackup">
+
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="face" />
 
         <activity
             android:name=".feature.history.view.HistoryActivity"
