--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
   versions = [
       jvm                   : "1.8",
-      kotlin                : "1.4.21",
+      kotlin                : "1.4.30",
       android_plugin        : "3.5.2",
       navigation            : "2.3.0",
       lifecycle             : "2.2.0",
@@ -31,9 +31,11 @@ ext {
       color_picker          : "2.2.2",
       play_core             : "1.9.0",
       gms_location          : "17.0.0",
+      gms_face_detection    : "16.1.4",
       skeleton              : "1.1.2",
       shimmer_layout        : "2.1.0",
       relinker              : "1.4.1",
+      mlkit_face_detection  : "16.0.5",
       test_junit            : "4.13",
       test_core             : "1.3.0",
       test_arch_core        : "2.1.0",
@@ -147,7 +149,8 @@ ext {
   play_core = "com.google.android.play:core:${versions.play_core}"
 
   gms = [
-      location: "com.google.android.gms:play-services-location:${versions.gms_location}"
+      location      : "com.google.android.gms:play-services-location:${versions.gms_location}",
+      face_detection: "com.google.android.gms:play-services-mlkit-face-detection:${versions.gms_face_detection}"
   ]
 
   color_picker = "com.github.skydoves:colorpickerview:${versions.color_picker}"
@@ -157,4 +160,8 @@ ext {
   shimmer_layout = "io.supercharge:shimmerlayout:${versions.shimmer_layout}"
 
   relinker = "com.getkeepsafe.relinker:relinker:${versions.relinker}"
+
+  mlkit = [
+      face_detection: "com.google.mlkit:face-detection:${versions.mlkit_face_detection}"
+  ]
 }
